fixed spacing in card

--- a/src/components/personalinfocard/PersonalInfoCard.module.css
+++ b/src/components/personalinfocard/PersonalInfoCard.module.css
@@ -54,17 +54,21 @@
     max-height: 100%;
     box-sizing: border-box;
     border: 1px solid #151515;
-    width: 220px;
-    height: 220px;
+    width: 180px;
+    height: 180px;
     object-fit: cover;
     border-radius: 140px;
     margin-left: 16px;
 }
 
 @media only screen and (max-width: 600px) {
+    .infocard {
+        border-radius: 32px 0px 0px 32px;
+    }
+
     .img {
-        width: 90px;
-        height: 90px;
+        width: 110px;
+        height: 110px;
         align-self: center;
         margin-left: 8px;
     }
@@ -73,12 +77,12 @@
         display: flex;
         flex-direction: row;
         height: 100%;
-        justify-content: flex-start;
-        margin-left: 16px;
+        justify-content: flex-end;
+        align-items: flex-end;
     }
       
     .gridWrapper {
-        grid-template-columns: 30% 70%;
+        grid-template-columns: 35% 65%;
         height: fit-content;
     }
 
